# k8s-microservice-ecommerce

./: .gitignore  AGENTS.md  LEARNING_NOTES.md  README.md  skaffold.yaml
.github/workflows/: ci-api-gateway-bff.yml  ci-frontend.yml  ci-notification-service.yml  ci-order-service.yml  ci-payment-service.yml  ci-product-service.yml  ci-user-service.yml  tf-apply.yml
argocd/apps/: app-of-apps.yaml  services.yaml
helm-charts/api-gateway-bff/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
helm-charts/databases/: Chart.yaml  values-local.yaml  values.yaml
helm-charts/frontend/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
helm-charts/notification-service/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
helm-charts/order-service/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
helm-charts/payment-service/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
helm-charts/product-service/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
helm-charts/user-service/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
infrastructure/terraform/: argocd.tf  ecr.tf  eks.tf  iam.tf  main.tf  outputs.tf  security_groups.tf  variables.tf  vpc.tf  waf.tf
platform/istio/: authorization-policy.yaml  (+9 more)
scripts/: argocd-bootstrap.sh  deploy-local.sh  destroy.sh  infra-apply.sh  infra-init.sh  istio-install.sh  kong-install.sh  local-setup.sh  port-forward.sh  vault-setup.sh
services/payment-service/: .env.example  Cargo.toml  Dockerfile
services/payment-service/src/: main.rs
(+70 files in other folders)
